--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mustache-express": "^1.3.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
