--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,9 +13,11 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "sqlite": "^3.0.6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "jest": "^26.6.3"
   }
 }
